# Refactor-Conditionals

./: CMakeLists.txt  README.md
code/: ExampleConditionals.h
cpp/: CMakeLists.txt  README.md
cpp-makefile-doctest/: .gitignore  Makefile  README.md
cpp-makefile-doctest/code/: ExampleConditionals.h
cpp-makefile-doctest/tests/: ExampleConditionalsTest.cpp
cpp/src/: CMakeLists.txt  ConditionalClass.cpp  ConditionalClass.h  ExampleConditionals.h
cpp/test-catch2/: sample_catch.cpp
cpp/test-doctest/: sample_doctest.cpp
csharp/RefactorConditionals/: RefactorConditionals.sln
csharp/RefactorConditionals/RefactorConditionals/: ExampleConditionals.cs
csharp/RefactorConditionals/RefactorConditionals.Tests/: ExampleConditionalsTest.cs  RefactorConditionals.Tests.csproj
java/: pom.xml
java/src/main/java/condexample/: Conditions.java  ExampleConditionals.java  ExampleConditionals2.java
java/src/main/java/gdi_calc/: BigHairyClass.java  GDI.java  GDICalculations.java  ReportSettings.java
java/src/main/java/hart/: CommandDescriptor.java  HartCommand.java  HartCommandBuffer.java  HartProcesser.java
java/src/main/java/realistic/: BigHairyClass.java  GDI.java  GDICalculations.java  ReportSettings.java
java/src/test/java/condexample/: ConditionsTest.java  ExampleConditionalsTest.java
php/: README.md  composer.json
php/src/: ExampleConditionals.php
php/tests/: ExampleConditionalsTest.php
python/: README.md
python/src/: example_conditionals.py  lift_up_conditionals.py
python/tests/: test_something.py
tests/: CMakeLists.txt  ExampleConditionalsTest.cpp
